apps/metube/deployment-metube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: metube
  name: metube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metube
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: metube
    spec:
      containers:
        - image: ghcr.io/alexta69/metube:2026.09.28
          name: metube
          resources:
            requests:
              memory: 60Mi
          env: []
          ports:
          - containerPort: 8081
            protocol: TCP
          volumeMounts:
            - mountPath: /downloads
              name: metube
      restartPolicy: Always
      volumes:
        - name: metube
          persistentVolumeClaim:
            claimName: metube
