apps/metube/service-metube.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metube
  name: metube
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: metube
