apps/metube/ingress-metube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube
spec:
  ingressClassName: nginx
  rules:
  - host: metube.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: metube
            port:
              number: 8081
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - metube.almothana.xyz
      secretName: almothana-xyz-tls
